[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-local"
version = "0.1.0"
description = "A CLI tool to practice LeetCode problems locally"
authors = [{ name = "Sheeba Moghal", email = "msheeba00@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "click",
]

[project.scripts]
leetcode-local = "leetcode_local.cli:cli"

[tool.setuptools]
packages = ["leetcode_local"]

[tool.setuptools.package-data]
leetcode_local = ["*.py"]
